# casper-wallet-sdk

./: Cargo.toml  LICENSE  Odra.toml  README.md
.cargo/: config.toml
src/: eip712.rs  lib.rs  payment_guard.rs  token.rs
wasm/: Cep18x402.wasm  PaymentGuard.wasm
