[package]
edition = "2021"
name = "casper_wallet_sdk"
version = "0.1.0"
license = "MIT"
description = "A programmable spending-limit smart-wallet vault for Casper Network (Odra)."
repository = "https://github.com/Aeztrest/casper-wallet-sdk"

[dependencies]
odra = { version = "2.7.0", features = [], default-features = false }
odra-modules = { version = "2.7.0", features = [], default-features = false }

[dev-dependencies]
odra-test = { version = "2.7.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.7.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.7.0", features = [], default-features = false }

[[bin]]
name = "casper_wallet_sdk_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "casper_wallet_sdk_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
